
  - Added "calpos()", "pos()" and "rp()" commands for triple-axis
    spectrometers.

  - Renamed the "name" setup entry to "description" to match its function.

  - Taco motors now can read the absolute limits from the Taco device.

  - Removed "setPosition()" from abstract Axis.  Moved "setPosition()" from
    abstract Motor to abstract Coder.

  - Changed the "FRMDetector" class to have lists of monitor and counter
    channels as adevs.  Presets are either "t" or "monX" or "ctrX", where
    X is the number of the monitor/counter channel.

  - Added suggestion of possible commands when misspelled on the console.

  - The TAS commands are not included automatically in setups anymore.

  - Added "coordinates" parameter to slits to select the coordinate
    convention for right/left, bottom/top axes.

  - Removed first ("converter") argument from parameter type "oneof".

  - Added a "FinishExperiment()" user command.

  - Added "poll" and "neverpoll" parameters to the Poller object.

  - When calling "stop()" without devices, stop all devices in parallel.

  - Added "localcontact" parameter for experiment.

  - The "pollinterval" parameter of readables can now be None, to disable
    polling.

  - The Axis class now has a "jitter" parameter that can account for
    jitter in the movement, e.g. due to airpads.

  - Added a "RemoveSetup" command that re-loads everything except for the
    given setups.

**Release 2.0.1**

  - In "ImageStorage", made sure the data file isn't overwritten unless
    explicitly allowed.

  - Fixed the "steps" parameter of IPC coders.

  - Fixed nicos.conf not being read.  Prepend PYTHONPATH entries to
    sys.path instead of appending.

  - Fixed TAS wavevectors to always move in inverse angstroms.

  - Fixed data file counting bug: when two sessions were writing data
    files, they could use the same counter and try to write the same file.

**Release 2.0.0 (2012-01-11)**

  - Initial release.