@@ -66,6 +66,9 @@ Changelog for NICOS 2
   - Added a "RemoveSetup" command that re-loads everything except for the
     given setups.
 
+  - Creating the standard detectors/envlist is now retried every time the
+    attribute is accessed from the experiment.
+
 **Release 2.0.1**
 
   - In "ImageStorage", made sure the data file isn't overwritten unless
